# pca_opencv

./: CMakeLists.txt  README.md  README.txt  main.cpp  numjpg.py  pca_opencv.vcxproj  源.cpp
include/: CMakeLists.txt  unity.hpp
src/: CMakeLists.txt  unity.cpp
x64/Debug/: vc142.idb
x64/Debug/pca_opencv.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pca_opencv.lastbuildstate
